Bug 118784 - Place holder image when copy/pasting from the web using Safari
Summary: Place holder image when copy/pasting from the web using Safari
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha1+
Hardware: All macOS (All)
: high major
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.2.0 target:6.1.3
Keywords: bibisected, bisected, regression
: 118782 (view as bug list)
Depends on:
Blocks: Paste
  Show dependency treegraph
 
Reported: 2018-07-16 13:15 UTC by Telesto
Modified: 2019-04-14 18:13 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Safari RTF-produced content. (824 bytes, application/rtf)
2018-09-11 12:22 UTC, Miklos Vajna
Details
Conditional revert. (3.20 KB, patch)
2018-09-11 12:41 UTC, Miklos Vajna
Details
image showing it works (101.81 KB, image/png)
2018-09-21 14:39 UTC, BogdanB
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2018-07-16 13:15:53 UTC
Description:
MacOS: Place holder image when copy/pasting from the web using Safari

Steps to Reproduce:
1. Open https://thcboneandjoint.com/educational-resources/knee-exercises.html 
2. Copy the exercise from a "square"
3. Paste it into Writer -> Small placeholder

Actual Results:
A place holder

Expected Results:
A image


Reproducible: Always


User Profile Reset: No



Additional Info:
Found in 6.1.0.1 and in 4.3.7.2
Comment 1 Alex Thurgood 2018-07-27 07:19:21 UTC
No repro for me with

Version: 6.0.5.2
Build ID: 54c8cbb85f300ac59db32fe8a675ff7683cd5a16
Threads CPU : 4; OS : Mac OS X 10.13.6; UI Render : par défaut; 
Locale : fr-FR (fr_FR.UTF-8); Calc: group
Comment 2 Alex Thurgood 2018-07-27 07:21:54 UTC
Confirmed with

Version: 6.2.0.0.alpha0+
Build ID: ab3e7a234fb6e55274159952743d6c937c7c3f7c
CPU threads: 4; OS: Mac OS X 10.13.6; UI render: default; 
Locale: fr-FR (fr_FR.UTF-8); Calc: group threaded
Comment 3 Alex Thurgood 2018-07-27 07:23:12 UTC
With LO master build, I don't even get a placeholder, only the text is pasted into the Writer document.
Comment 4 Xisco Faulí 2018-07-30 09:41:21 UTC
Regression introduced by:

author	Miklos Vajna <vmiklos@collabora.co.uk>	2018-03-29 18:27:13 +0200
committer	Miklos Vajna <vmiklos@collabora.co.uk>	2018-03-29 19:28:11 +0200
commit 29d4ecf32392bc94ab0ba9e73fd79eba65c23fdb (patch)
tree a6f88f801f0857063820b7f39a894f10d64fee7b
parent d7a8fa7adf2b2b098a1e38cd7002c928d015b489 (diff)
tdf#115574 sot: fix Excel -> Writer paste

Bisected with: bibisect-mac64-6.1

Adding Cc: to Miklos Vajna

Most likely, this commit just arose an old bug in mac...
Comment 5 Xisco Faulí 2018-08-22 15:46:00 UTC
*** Bug 118782 has been marked as a duplicate of this bug. ***
Comment 6 Xisco Faulí 2018-08-22 15:48:14 UTC
On windows, if the paste action is undone, LibreOffice crashes with http://crashreport.libreoffice.org/stats/signature/BigPtrArray::Index2Block(unsigned%20long), which is the same as in bug 117215
Comment 7 Miklos Vajna 2018-09-11 12:22:11 UTC
Created attachment 144789 [details]
Safari RTF-produced content.

This is what Safari produces as far as I see, it simply does not have the image data. So I guess one option is to just conditionally revert the above commit for macOS.

I would say the IE case is independent from this: it is not known if our RTF import is buggy or IE produces an RTF without images, it would be good to check that first. If it's the previous, it's a separate bug.
Comment 8 Miklos Vajna 2018-09-11 12:41:43 UTC
Created attachment 144791 [details]
Conditional revert.

Telesto, Xisco: could you please test this patch? This is just a conditional revert, so it should work, but it's a blind fix.
Comment 9 Xisco Faulí 2018-09-12 15:09:28 UTC
(In reply to Miklos Vajna from comment #8)
> Created attachment 144791 [details]
> Conditional revert.
> 
> Telesto, Xisco: could you please test this patch? This is just a conditional
> revert, so it should work, but it's a blind fix.

Hi Miklos,
i do confirm the patch above fixes the issue...
Comment 10 Commit Notification 2018-09-18 07:57:22 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3c25e7a31bd8b5b40f86208cd141c6108cb736c5

tdf#118784 sot: lower priority of RTF clipboard format on macOS

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Miklos Vajna 2018-09-18 08:02:16 UTC
(In reply to Xisco Faulí from comment #9)
> i do confirm the patch above fixes the issue...

Thanks for the test!
Comment 12 Xisco Faulí 2018-09-19 10:55:05 UTC
Cherry-picked to 6.1: https://gerrit.libreoffice.org/#/c/60753/
Comment 13 Miklos Vajna 2018-09-19 11:05:49 UTC
Thank you. I intended to do that, but forgot.
Comment 14 Commit Notification 2018-09-20 15:42:05 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=25ea936cc4bd060cb7fd60ec65c414ba2bade928&h=libreoffice-6-1

tdf#118784 sot: lower priority of RTF clipboard format on macOS

It will be available in 6.1.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 BogdanB 2018-09-21 14:39:58 UTC
Created attachment 145088 [details]
image showing it works

It's ok on 6.2

Version: 6.2.0.0.alpha0+
Build ID: e005ab5d40d358adb75a64e140d46f4bf605647d
CPU threads: 4; OS: Linux 4.15; UI render: GL; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2018-09-15_02:08:38
Locale: ro-RO (ro_RO.UTF-8); Calc: threaded
Comment 16 BogdanB 2018-09-21 14:40:45 UTC
(In reply to BogdanB from comment #15)
> Created attachment 145088 [details]
> image showing it works
> 
> It's ok on 6.2
> 

Was about MAC, not Linux... sorry...