tdf#118784 sot: lower priority of RTF clipboard format on macOS

This was a problem since commit 29d4ecf32392bc94ab0ba9e73fd79eba65c23fdb
(tdf#115574 sot: fix Excel -> Writer paste, 2018-03-29), the root cause
seems to be that (older?) Safari provides RTF clipboard content which
simply doesn't contain the images.

Just to back to the old behavior on macOS for now, hopefully the
problematic RTF producer will go away in the long run.

Change-Id: I5c40b28671978cfbf8593f1cc9775985dffc5030
Reviewed-on: https://gerrit.libreoffice.org/60641
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Jenkins
(cherry picked from commit 3c25e7a31bd8b5b40f86208cd141c6108cb736c5)